# rules_buf

./: .bazelrc  LICENSE  README.md  WORKSPACE
buf/: BUILD.bazel  defs.bzl  repos.bzl
internal/: buf_build.bzl
internal/tools/: BUILD.bazel
tests/basic/: BUILD.bazel  model.json  sample.proto
